Fixed the background image scroll/fixed on mobile devices

--- a/css/brug_colors.css
+++ b/css/brug_colors.css
@@ -16,17 +16,13 @@
     opacity: 1;
     filter: alpha(opacity=100);
     transition: opacity .3s ease .2s,
-                filter .3s ease .2s,
-                background-color .3s ease .2s;
+                filter .3s ease .2s;
     -webkit-transition: opacity .3s ease .2s,
-                filter .3s ease .2s,
-                background-color .3s ease .2s;
+                filter .3s ease .2s;
     -moz-transition: opacity .3s ease .2s,
-                filter .3s ease .2s,
-                background-color .3s ease .2s;
+                filter .3s ease .2s;
     -mz-transition: opacity .3s ease .2s,
-                filter .3s ease .2s,
-                background-color .3s ease .2s;
+                filter .3s ease .2s;
 }
 
 @media only screen and (min-width: 768px) {
